# followflow-studio

./: .dockerignore  .gitignore  Dockerfile  FollowFlow.spec  README.md  README_DOCKER.md  docker-compose.yml  followflow_app.py  instagram_export_agent.py  instagram_scrape_agent.py  manual_unfollow_review.py  pyproject.toml  unfollow_list.py
.github/workflows/: docker.yml  release.yml
scripts/: build_windows_exe.ps1
src/followflow/: browser.py  cli.py  common.py  compare.py  export_parser.py  launcher.py  review.py  review_ui.py  scrape.py
src/instagram_cleanup/: __init__.py  __main__.py  cli.py
tests/: test_browser_dialogs.py  test_scrape_auth_flow.py
