[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "followflow-studio"
version = "0.2.0"
description = "Prepare follower data, compare non-mutuals, and review profiles with a polished desktop workflow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.58.0",
  "customtkinter>=5.2.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.16.0",
]

[project.scripts]
followflow = "followflow.cli:main"
followflow-app = "followflow.launcher:main"
ig-cleanup = "followflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
